--- a/vignettes/Chemical.Rmd
+++ b/vignettes/Chemical.Rmd
@@ -1,8 +1,13 @@
 ---
-title: "Chemical-endpoints"
-output: rmarkdown::html_vignette
+title: "Chemical APIs"
+author: "Center for Computational Toxicology and Exposure"
+output:
+   prettydoc::html_pretty:
+    theme: architect
+    toc: yes
+    toc_depth: 5
 vignette: >
-  %\VignetteIndexEntry{Chemical-endpoints}
+  %\VignetteIndexEntry{Chemical}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
