--- a/vignettes/quickstart.Rmd
+++ b/vignettes/quickstart.Rmd
@@ -1,8 +1,13 @@
 ---
-title: "Getting started with ccdR"
-output: rmarkdown::html_vignette
+title: "Getting started with ccdR: <br> Introduction Vignette </br>"
+author: "Center for Computational Toxicology and Exposure"
+output:
+   prettydoc::html_pretty:
+    theme: architect
+    toc: yes
+    toc_depth: 5
 vignette: >
-  %\VignetteIndexEntry{"Getting started with ccdR"}
+  %\VignetteIndexEntry{"Getting started with ccdR: Introduction Vignette"}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -18,7 +23,7 @@ start_vignette("1")
 ```
 
 
-```{r setup}
+```{r setup, echo=FALSE}
 if (!library(ccdR, logical.return = TRUE)){
   devtools::load_all()
 }
@@ -47,46 +52,49 @@ registerS3method(
 ```
 
 
-## Introduction to CompTox Chemicals Dashboard
+## Introduction to the CompTox Chemicals Dashboard (CCD)
 
-Accessing chemical data and wrangling it is a vital step in many types of workflows related to chemical, biological, and environmental modeling. While there are many resources available from which one can pull data, the [CompTox Chemicals Dashboard](https://comptox.epa.gov/dashboard/) built and maintained by the United States Environmental Protection Agency is particularly well-designed and suitable for these purposes. Originally introduced in [The CompTox Chemistry Dashboard: a community data resource for environmental chemistry](https://jcheminf.biomedcentral.com/articles/10.1186/s13321-017-0247-6), the CCD contains information on over 1.2 million chemicals as of December 2023. 
+Accessing chemical data is a vital step in many workflows related to chemical, biological, and environmental modeling. While there are many resources available from which one can pull data, the [CompTox Chemicals Dashboard](https://comptox.epa.gov/dashboard/) (CCD), built and maintained by the United States Environmental Protection Agency, is particularly well-designed and suitable for these purposes. Originally introduced in [The CompTox Chemistry Dashboard: a community data resource for environmental chemistry](https://jcheminf.biomedcentral.com/articles/10.1186/s13321-017-0247-6), the CCD contains information on over 1.2 million chemicals as of December 2023. 
 
-The CCD includes chemical information from many different domains, including physicochemical, environmental fate and transport, exposure, usage, in vivo toxicity, and in vitro bioassay data (Williams et al., 2017).
+The CCD includes chemical information from many different domains, including physicochemical, environmental fate and transport, exposure, usage, *in vivo* toxicity, and *in vitro* bioassay data. For information on data sources and current versions, please review the [CCD Release Notes](https://www.epa.gov/comptox-tools/comptox-chemicals-dashboard-release-notes).
 
-The CCD can be searched either one chemical at a time, or using a batch search.
+The CCD can be queried for one chemical at a time or using batch search.
 
 ### Searching one chemical at a time (single-substance search)
 
-In single-substance search, the user types a full or partial chemical identifier (name, CASRN, InChiKey, or DSSTox ID) into a search box on the CCD homepage. Autocomplete provides a list of possible matches; the user selects one by clicking on it, and is then taken to the CCD page for that substance. Figure 1 shows an example: the CCD page for the chemical Bisphenol A. 
+In single-substance search, the user enters a full or partial chemical identifier (name, CASRN, InChiKey, or DSSTox ID) into a search box on the CCD homepage. Autocomplete can provide a list of possible matches. Figure 1 shows an example: the CCD landing page for the chemical [Bisphenol A](https://comptox.epa.gov/dashboard/chemical/invitrodb/DTXSID7020182). 
 
-```{r, echo = FALSE, out.width= "90%", fig.align= 'center', fig.cap= "Fig 1: Bisphenol A landing page"}
-knitr::include_graphics('./Pictures/CCD_BPA_page.png')
-```
+<center>
 
+![<font style="font-size:15px"><i>Figure 1: Bisphenol A CCD landing page</i></font>](./Pictures/CCD_BPA_page.png)
+
+</center>
 
 The different domains of data available for this chemical are shown by the tabs on the left side of the page: for example, "Physchem Prop." (physico-chemical properties), "Env. Fate/Transport" (environmental fate and transport data), and "Hazard Data" (*in vivo* hazard and toxicity data), among others. 
 
 ### Batch search
 
-In batch search, the user enters a list of search inputs, separated by newlines, into a batch-search box on https://comptox.epa.gov/dashboard/batch-search . The user selects the type(s) of inputs by selecting one or more checkboxes – these may include chemical identifiers, monoisotopic masses, or molecular formulas. Then, the user selects “Display All Chemicals” to display the list of substances matching the batch-search inputs, or “Choose Export Options” to choose options for exporting the batch-search results as a spreadsheet. The exported spreadsheet may include data from most of the domains available on an individual substance’s CCD page.
+In [batch search](https://comptox.epa.gov/dashboard/batch-search), the user enters a list of search inputs, separated by new lines, into a search box. The user selects the type(s) of inputs by selecting one or more checkboxes – include chemical identifiers, monoisotopic masses, or molecular formulas. Then, the user selects “Display All Chemicals” to display the list of substances matching the batch-search inputs, or “Choose Export Options” to choose options for exporting the batch-search results as a spreadsheet. The exported spreadsheet may include data from most of the domains available on an individual substance’s CCD page.
 
+<center>
 
-```{r, echo = FALSE, out.width = "90%", fig.align = 'center', fig.cap="Fig 2: CCD Batch Search"}
-knitr::include_graphics('./Pictures/CCD_Batch_Search.png')
-```
+![<font style="font-size:15px"><i>Figure 2: CCD Batch Search</i></font>](./Pictures/CCD_Batch_Search.png)
+
+</center>
 
 The user can download the selected information in various formats, such as Excel (.xlsx), comma-separated values (.csv), or different types of chemical table files (.e.g, MOL). 
 
-```{r, echo=FALSE, out.width="90%", fig.align='center', fig.cap='Fig 3: CCD Batch Search Customize Export'}
-knitr::include_graphics('./Pictures/CCD_Batch_Search_customize_export_results.png')
-```
+<center>
 
+![<font style="font-size:15px"><i>Figure 3: CCD Batch Search Customized Export</i></font>](./Pictures/CCD_Batch_Search_customize_export_results.png)
 
-The web interface for batch search only allows input of 10,000 identifiers at a time. If a user needs to retrieve information for more than 10,000 chemicals, they will need to separate their identifiers into multiple batches and search each one separately.
+</center>
+
+The web interface for batch search only allows input of 10,000 identifiers at a time. If a user wants to retrieve information for more than 10,000 chemicals, identifiers will need to be separated into multiple batches and searched separately.
 
 ### Challenges of web-based dashboard search
 
-Practicing researchers typically end up with a Dashboard workflow that looks something like this:
+Practicing researchers may follow a workflow that looks something like this:
 
 1.	Start with a dataset that includes your chemical identifiers of interest. These may include chemical names, Chemical Abstract Service Registry Numbers (CASRNs), Distributed Searchable Structure-Toxicity Database (DSSTox) identifiers, or InChIKeys.
 2.	Export the chemical identifiers to a spreadsheet. Often, this is done by importing the data into an environment such as R or Python, in order to do some data wrangling (e.g., to select only the unique substance identfiers; to clean up improperly-formatted CASRNs; etc.). Then, the identifiers are saved in a spreadsheet (an Excel, .csv, or .txt file), one chemical identifier per row.
@@ -100,97 +108,107 @@ Practicing researchers typically end up with a Dashboard workflow that looks som
 
 Because each of these workflow steps requires manual interaction with the search and download process, the risk of human error inevitably creeps in. Here are a few real-world possibilities (the authors can neither confirm nor deny that they have personally committed any of these errors):
 
--	Researchers could copy/paste the wrong identifiers into the CCD batch search, especially if they have more than 10,000 identifiers and have to divide them into batches.
--	Chemical identifiers could be corrupted during the process of exporting to a spreadsheet. For example, if a researcher opens and resaves a CSV file using Microsoft Excel, any information that appears to be in date-like format will be automatically converted to a date (unless the researcher has the most recently-updated version of Excel and has selected the option in Settings that will stop Excel from auto-detecting dates). This behavior has long been identified as a problem in genomics, where gene names can appear date-like to Excel (Abeysooriya et al. 2021). It also affects cheminformatics, where chemical identifiers can appear date-like to Excel. For example, the valid CASRN “1990-07-4” would automatically be converted to “07/04/1990” (if Excel is set to use MM/DD/YYYY date formats). CCD batch search cannot recognize "07/04/1990" as a valid chemical identifier and will be unable to return any chemical data.
--	Researchers could accidentally rename a downloaded CCD data file to overwrite a previous download (for example, when searching multiple batches of identfiers). 
--	Researchers could mistakenly import the wrong CCD download file back into their analysis environment (for example, when searching multiple batches of identfiers). 
+-	Researchers could copy/paste the wrong identifiers into the CCD batch search, especially if more than 10,000 identifiers need to be divided into separate batches.
+-	Chemical identifiers could be corrupted during the process of exporting to a spreadsheet. 
+    - If a researcher opens and resaves a CSV file using Microsoft Excel, any information that appears to be in date-like format will be automatically converted to a date (unless the researcher has the most recently-updated version of Excel and has selected the option in Settings that will stop Excel from auto-detecting dates). This behavior has long been identified as a problem in genomics, where gene names can appear date-like to Excel (Abeysooriya et al. 2021). It also affects cheminformatics, where chemical identifiers can appear date-like to Excel. For example, the valid CASRN “1990-07-4” would automatically be converted to “07/04/1990” (if Excel is set to use MM/DD/YYYY date formats). CCD batch search cannot recognize "07/04/1990" as a valid chemical identifier and will be unable to return any chemical data.
+-	Researchers could accidentally rename a downloaded CCD data file to overwrite a previous download, e.g. when searching multiple batches of identifiers. 
+-	Researchers could mistakenly import the wrong CCD download file back into their analysis environment e.g. when searching multiple batches of identifiers. 
 
-Moreover, the manual stages of this kind of workflow are also non-transparent and not easily reproducible. 
+Moreover, the manual stages of this kind of workflow are also non-transparent and not easily reproducible. Utilizing APIs for data exploration and retrieval can alleviate these concerns. 
 
-## CCTE's Application Programming Interfaces (APIs) for Automated Batch Search of the CCD
+## Application Programming Interfaces (APIs) for Automated Batch Search of the CCD
 
+Recently, the [Center for Computational Toxicology and Exposure](https://www.epa.gov/aboutepa/about-center-computational-toxicology-and-exposure-ccte) (CCTE) developed a set of Application Programming Interfaces (APIs) that allows programmatic access to the CCD, bypassing the manual steps of the web-based batch search workflow. APIs effectively automate the process of accessing and downloading the data that populates the CCD. 
 
-Recently, the [Center for Computational Toxicology and Exposure](https://www.epa.gov/aboutepa/about-center-computational-toxicology-and-exposure-ccte) (CCTE) developed a set of Application Programming Interfaces (APIs) that allows programmatic access to the CCD, bypassing the manual steps of the web-based batch search workflow. APIs effectively automate the process of accessing and downloading data from the web pages that make up the CCD. 
+The [CCTE APIs](https://api-ccte.epa.gov/docs/) are publicly available at no cost to the user. However, in order to use the CCTE APIs, users must have a individual API key. The API key uniquely identifies the user to the CCD servers and verifies that you have permission to access the database. Getting an API key is free, but requires contacting the API support team at [ccte_api@epa.gov](mailto:ccte_api@epa.gov).
 
+The APIs are organized into sets of "endpoints" by data domains: `Chemical`, `Hazard`, and `Bioactivity`. A view from the [Chemical APIs](https://api-ccte.epa.gov/docs/chemical.html) web interface is pictured below.
 
-The [CCTE APIs](https://api-ccte.epa.gov/docs/) are publicly available at no cost to the user. However, in order to use the CCTE APIs, you must have an API key. The API key uniquely identifies you to the CCD servers and verifies that you have permission to access the database. Getting an API key is free, but requires contacting the API support team at [ccte_api@epa.gov](mailto:ccte_api@epa.gov).
+<center>
 
-The APIs are organized into three sets of "endpoints" (chemical data domains): `Chemical`, `Hazard`, and `Bioactivity`. Pictured below in Figure 4 is what the `Chemical` section looks like and can be found at [CCTE API Chemical Endpoints](https://api-ccte.epa.gov/docs/chemical.html).
+![<font style="font-size:15px"><i>Figure 4: CCTE API Chemical Endpoints</i></font>](./Pictures/CCTE_Chemical_API_endpoints.png)
 
-```{r, echo = FALSE, out.width = "90%", fig.align='center', fig.cap="Fig 4: CCTE API Chemical Endpoints"}
-knitr::include_graphics('./Pictures/CCTE_Chemical_API_endpoints.png')
-```
+</center>
 
-The APIs can be explored through the pictured web interface at https://api-ccte.epa.gov/docs/chemical.html .
+On the left side of each domain's web interface page, there will be several different tabs listed depending on information requests available within the domain. In Figure 4, the `Chemical Details Resource` endpoint provides basic chemical information; the `Chemical Property Resource` endpoint provides more comprehensive physico-chemical property information; the `Chemical Fate Resource` endpoint provides chemical fate and transport information; and so on. 
 
-### CCTE API authentication
+### Authentication
 
-`Authentication` is the first tab on the left. Authentication is required to use the APIs. To authenticate yourself in the API web interface, input your unique API key.
+`Authentication`, found in upper left tab on each web interface page, is required to use the APIs. To authenticate themselves in the API web interface, the user must input their unique API key.
 
-```{r, echo = FALSE, out.width = "90%", fig.align='center', fig.cap="Fig 5: CCTE API Key Authentication"}
-knitr::include_graphics("./Pictures/CCTE_API_Key_authentication.png")
-```
+<center>
 
+![<font style="font-size:15px"><i>Figure 5: API Key Authentication</i></font>](./Pictures/CCTE_API_Key_authentication.png)
 
-### CCTE API endpoints
+</center>
 
+### Request Construction
 
-On the left of the API web interface, there are several different tabs, one for each endpoint in the `Chemical` domain. The endpoints are organized by the type of information provided. For instance, the `Chemical Details Resource` endpoint provides basic chemical information; the `Chemical Property Resource` endpoint provides more comprehensive physico-chemical property information; the `Chemical Fate Resource` endpoint provides chemical fate and transport information; and so on. 
+APIs effectively automate the process of accessing and downloading the data that populates the CCD. APIs do this via requests using the Hypertext Transfer Protocol (HTTP) that enables communication between clients (e.g. your computer) and servers (e.g. the CCD).
 
+In the CCTE API web interface, the colored boxes next to each endpoint indicate the type of the associated HTTP method. <span style="color:blue">GET</span> is used to request data from a specific web resource (e.g. a specific URL); <span style="color:green">POST</span> is used to send data to a server to create or update a web resource. For the CCTE APIs, <span style="color:green">POST</span> requests are used to perform multiple (batch) searches in a single API call; <span style="color:blue">GET</span> requests are used for non-batch searches. 
 
-### Constructing CCTE API requests
+You do not need to understand the details of POST and GET requests in order to use the API. Let's consider constructing an API request to `Get data by dtxsid` under the `Chemical Details Resource`.
 
-As mentioned above, APIs effectively automate the process of accessing and downloading data from the web pages that make up the CCD. APIs do this by automatically constructing requests using the Hypertext Transfer Protocol (HTTP) that enables communication between clients (e.g. your computer) and servers (e.g. the CCD).
+<center>
 
-In the CCTE API web interface, the colored boxes next to each endpoint indicate the type of the associated HTTP method: either a GET request ("GET", blue) or a a POST request ("POS", green). GET is used to request data from a specific web resource (e.g. a specific URL); POST is used to send data to a server to create or update a web resource. For the CCTE APIs, POST requests are used to perform multiple (batch) searches in a single API call; GET requests are used for non-batch searches. You do not need to understand the details of POST and GET requests in order to use the API.
+![<font style="font-size:15px"><i>Figure 6: Get Details by DTXSID</i></font>](./Pictures/Get_Data_by_DTXSID_TOP.png)
 
-Click on the second item under `Chemical Details Resource`, the tab labeled `Get data by dtxsid`. The following page will appear.
+</center>
 
-```{r, echo = FALSE, out.width = "90%", fig.align='center', fig.cap="Fig 6: CCTE Get Details by DTXSID"}
-knitr::include_graphics("./Pictures/Get_Data_by_DTXSID_TOP.png")
-```
+The web interface has two subheadings:
 
-
-This page has two subheadings: "Path Parameters" and "Query-String Parameters". "Path Parameters" contains user-specified parameters that are required in order to tell the API what URL (web address) to access. In this case, the required parameter is a string for the DTXSID identifying the chemical to be searched.
-
-"Query-String Parameters" contain user-specific parameters (usually optional) that tell the API what specific type(s) of information to download from the specified URL. In this case, the optional parameter is a `projection` parameter, a string that can take one of five values (`chemicaldetailall`, `chemicaldetailstandard`, `chemicalidentifier`, `chemicalstructure`, `ntatoolkit`). Depending on the value of this string, the API can return different sets of information about the chemical. If the `projection` parameter is left blank, then a default set of chemical information is returned.
+- **Path Parameters** contain user-specified parameters that are required in order to tell the API what URL (web address) to access. In this case, the required parameter is a string for the DTXSID identifying the chemical to be searched.
+- **Query-String Parameters** contain user-specific parameters (usually optional) that tell the API what specific type(s) of information to download from the specified URL. In this case, the optional parameter is a `projection` parameter, a string that can take one of five values (`chemicaldetailall`, `chemicaldetailstandard`, `chemicalidentifier`, `chemicalstructure`, `ntatoolkit`). Depending on the value of this string, the API can return different sets of information about the chemical. If the `projection` parameter is left blank, then a default set of chemical information is returned.
 
 The default return format is displayed below and includes a variety of fields with data types represented.
 
-```{r, echo = FALSE, out.width = "90%", fig.align='center', fig.cap= "Fig 7: CCTE Get Details by DTXSID data types"}
-knitr::include_graphics("./Pictures/Get_Data_by_DTXSID_BOTTOM.png")
-```
 
+<center>
 
-We show what returned data from searching Bisphenol A looks like using this endpoint with the `chemicaldetailstandard` value for `projection` selected.
+![<font style="font-size:15px"><i>Figure 7: Get Details by DTXSID, Return Format</i></font>](./Pictures/Get_Data_by_DTXSID_BOTTOM.png)
 
-```{r, echo = FALSE, out.width = "90%", fig.align='center', fig.cap="Fig 8: Bisphenol A output"}
-knitr::include_graphics("./Pictures/BPA_chemicaldetailstandard.png")
-```
+</center>
 
+Pictured below is an example of returned Details for Bisphenol A with the `chemicaldetailstandard` value for `projection` selected.
+
+<center>
+
+![<font style="font-size:15px"><i>Figure 8: Returned Details for Bisphenol A</i></font>](./Pictures/BPA_chemicaldetailstandard.png)
+
+</center>
+
+## Introduction to ccdR
 
 Formatting an http request is not necessarily intuitive nor worth the time for someone not already familiar with the process, so these endpoints may provide a resource that for many would require a significant investment in time and energy to learn how to use. However, there is a solution to this in the form of the R package *ccdR*.
 
-*ccdR* was developed to streamline the process of accessing the information available through the CCTE APIs without requiring prior knowledge of how to use APIs. As an example, we demonstrate the ease with which one may retrieve the information given by this endpoint for Bisphenol A using the *ccdR* approach and contrast it with the approach using the CCD website or CCTE `Chemical` Endpoint website.
+*ccdR* was developed to streamline the process of accessing the information available through the CCTE APIs without requiring prior knowledge of how to use APIs. 
 
+### Package Settings
 
-## API key
+Users can run `library(ccdR)` to install from CRAN or install the development version of ccdR like so:
 
-Before getting started, a user must have an API key ready to use in order to access the CCTE APIs. This can be obtained from the admins of the CCTE APIs by emailing [CCTE API Admins](mailto:ccte_api@epa.gov). In this vignette, the key will be stored as the variable `my_key`. We will also demonstrate how to store the key in a single session or across sessions and how to access the key.
+```{r, eval=FALSE}
+if (!library(devtools, logical.return = TRUE)){
+  install.packages(devtools)
+  library(devtools)}
 
-First, we store the api key in the variable `my_key`.
+devtools::install_github("USEPA/ccdR")
+```
+
+### API Key Storage
+
+As previously described, a user must have an API key to use in order to access the CCTE APIs. This can be obtained from the admins of the CCTE APIs by emailing [CCTE API Admins](mailto:ccte_api@epa.gov). In the example code, the API key will be stored as the variable `my_key`.
 
 ```{r, echo = FALSE}
 my_key <- ccte_key()
 ```
 
-
-
 ```{r, eval = FALSE, api-key}
 my_key <- 'YOUR_CCTE_API_key'
 ```
 
-For general use of the package, one may use the function `register_ccdr()` to store the API key in the current session or more permanently for access across sessions. The following example demonstrates this.
+For general use of the package, the user may use the function `register_ccdr()` to store the API key in the current session or more permanently for access across sessions.
 
 ```{r, register-ccte, eval=FALSE}
 # This stores the key in the current session
@@ -200,7 +218,7 @@ register_ccdr(key = '<YOUR API KEY>')
 register_ccdr(key = '<YOUR API KEY>', write = TRUE)
 ```
 
-The API key is stored and the default display setting is turned off for protection. To change this, use the following functions as demonstrated.
+Once the API key is stored, the default display setting is turned off for protection. To change this, use the following functions as demonstrated.
 
 ```{r, display-hide-key}
 # To show the API key
@@ -218,15 +236,19 @@ Finally, to access the key, use the `ccte_key()` function.
 ccte_key()
 ```
 
+### Quick Start Examples
 
+As some quick start examples, we demonstrate the ease* of retrieving the information across endpoints for Bisphenol A using *ccdR*. *This is in contrast to the approach using the CCD or API web interface. 
 
-## Chemical APIs
+For additional examples and more comprehensive documentation on each endpoint, consider reviewing the other ccdR vignettes for the data domain of interest. 
 
-The CCTE APIs are split into three sections, the first of which is [Chemical APIs](https://api-ccte.epa.gov/docs/chemical.html#/). In the next few code chunks, we demonstrate how to use functions from ccdR to access different types of chemical information.
+#### Chemical APIs
 
-### Chemical Details Resource
+In this section, several ccdR functions are used to access different types of information from the [CCTE Chemical APIs](https://api-ccte.epa.gov/docs/chemical.html#/).
 
-The first function we explore is `get_chemical_details()`, which takes in either the DTXSID or DTXCID of a chemical and the user-specific API key. We obtain the relevant chemical details for Bisphenol A (BPA), which has DTXSID "DTXSID7020182".
+##### Chemical Details Resource
+
+The function `get_chemical_details()` takes in either the DTXSID or DTXCID of a chemical and the user-specific API key. Relevant chemical details for Bisphenol A, which has DTXSID "DTXSID7020182", are obtained in a data.table. output below:
 
 ```{r, bpa-chem-details}
 bpa_details <- get_chemical_details(DTXSID = 'DTXSID7020182',
@@ -234,14 +256,12 @@ bpa_details <- get_chemical_details(DTXSID = 'DTXSID7020182',
 bpa_details <- data.table::as.data.table(bpa_details)
 head(bpa_details)
 ```
-The output of this function is a data.table. We could have also input the DTXCID rather than the DTXSID and returned the same data.
 
-### Chemical Property Resource
+##### Chemical Property Resource
 
-The function `get_chem_info()` is similar. This returns phys-chem properties, which can be filtered to 'experimental' or 'predicted' if desired.
+The function `get_chem_info()` returns phys-chem properties for the selected chemical, and can be filtered to 'experimental' or 'predicted' if desired.
 
-
-First, we grab all results. 
+Here all phys-chem properties are returned for Bisphenol A:
 
 ```{r, bpa-chem-info}
 bpa_info <- get_chem_info(DTXSID = "DTXSID7020182",
@@ -251,7 +271,7 @@ bpa_info <- data.table::as.data.table(bpa_info)
 head(bpa_info)
 ```
 
-Next, we filter by experimental results.
+Request can be filtered to return experimental results only.
 
 ```{r, bpa-experimental}
 bpa_info_experimental <- get_chem_info(DTXSID = "DTXSID7020182",
@@ -262,15 +282,15 @@ bpa_info_experimental <- data.table::as.data.table(bpa_info_experimental)
 head(bpa_info_experimental)
 ```
 
-For a more comprehensive treatment of the chemical endpoints, please see the 'Chemical' vignette that explores more of the ccdR functions related to the associated chemical endpoints.
+#### Hazard APIs
 
-## Hazard APIs
+In this section, several ccdR functions are used to access different types of information from the [CCTE Hazard APIs](https://api-ccte.epa.gov/docs/hazard.html#/).
 
-Next, we explore the hazard APIs. We first demonstrate how to access human or ecological toxicity data for a given chemical. One can specify the chemical in question through the DTXSID.
+##### Hazard Resource
 
-### Hazard Resource
+The function `get_hazard_by_dtxsid()` retrieves hazard data (all human or ecological toxicity data) for a given chemical based on input DTXSID. `get_human_hazard_by_dtxsid()` and `get_ecotox_hazard_by_dtxsid()` can filter returned hazard results for the given chemical to human or ecological toxicity data, respectively.
 
-We first grab all such hazard data.
+Here all hazard data is returned for Bisphenol A:
 
 ```{r, hazard}
 bpa_hazard <- get_hazard_by_dtxsid(DTXSID = 'DTXSID7020182',
@@ -279,7 +299,7 @@ bpa_hazard <- data.table::as.data.table(bpa_hazard)
 head(bpa_hazard)
 ```
 
-Then we focus on human hazard data.
+Request can be refined to return results for human hazard,
 
 ```{r, human-hazard}
 bpa_human_hazard <- get_human_hazard_by_dtxsid(DTXSID = 'DTXSID7020182',
@@ -288,7 +308,7 @@ bpa_human_hazard <- data.table::as.data.table(bpa_human_hazard)
 head(bpa_human_hazard)
 ```
 
-And finally we focus on ecotox hazard data.
+or EcoTox results.
 
 ```{r, ecotox-hazard}
 bpa_eco_hazard <- get_ecotox_hazard_by_dtxsid(DTXSID = 'DTXSID7020182',
@@ -297,15 +317,13 @@ bpa_eco_hazard <- data.table::as.data.table(bpa_eco_hazard)
 head(bpa_eco_hazard)
 ```
 
-For more examples, please refer to the 'Hazard' vignette.
+#### Bioactivity APIs
 
-## Bioactivity APIs
+In this section, several ccdR functions are used to access different types of information from the [CCTE Bioactivity APIs](https://api-ccte.epa.gov/docs/bioactivity.html#/).
 
-The last set of APIs allow the user to access bioactivity information for a given chemical DTXSID or AEID.
+##### Bioactivity Resource
 
-### Bioactivity Resource
-
-We first demonstrate obtaining bioactivity data based on an input DTXSID.
+The function `get_bioactivity_details()` retrieves all bioactivity data for a given chemical based on input DTXSID. 
 
 ```{r, bioactivity-dtxsid}
 bpa_bioactivity <- get_bioactivity_details(DTXSID = 'DTXSID7020182',
@@ -315,7 +333,7 @@ bpa_bioactivity <- data.table::as.data.table(bpa_bioactivity)
 head(bpa_bioactivity)
 ```
 
-If instead we want to search by assay id, we can do so using the same function.
+The function `get_bioactivity_details()` can also be used to retrieve all bioactivity data for a given endpoint, based on input AEID (assay endpoint identifier).
 
 ```{r, bioactivity-aeid}
 assay_id_search <- get_bioactivity_details(AEID = 42,
@@ -324,11 +342,11 @@ assay_id_search <- data.table::as.data.table(assay_id_search)
 head(assay_id_search)
 ```
 
-Again, for more information please refer to the 'Bioactivity' vignette.
-
 ## Conclusion
 
-The ccdR package provides a streamlined approach to accessing data from the CCD for users with little or no prior experience using APIs. The functionality can be used within a variety of workflows that require data found on the CCD. To explore more examples of the various endpoints and functionality provided by the ccdR package, please refer to the 'Chemical-endpoints', 'Hazard', or 'Bioactivity' vignettes.
+The *ccdR* package provides a streamlined approach to accessing data from the CCD for users with little or no prior experience using APIs. 
+
+For additional examples and more comprehensive documentation on each endpoint, consider reviewing the other ccdR vignettes for the data domain of interest. 
 
 ```{r breakdown, echo = FALSE, results = 'hide'}
 # This chunk will be hidden in the final product. It serves to undo defining the
